# ai-news-studio

./: .env.example  .gitignore  AI_NEWS_STUDIO_SPEC.md.docx  CLAUDE.md  NEXT_STEPS.md  README.md  docker-compose.yml  manual.md  pyproject.toml  sample.json
.claude/: settings.json
.github/workflows/: daily.yml  publish.yml
assets/: LICENSES.md
assets/characters/: manifest.json
docs/: index.html  oauth-callback.html  privacy.html  terms.html  tiktok5vnyEKU34rX7Qj64dSZjuE2jpN3vl3TA.txt
scripts/: deploy_worker.py  finalize_character_assets.py  gen_character_assets.py  gen_placeholders.py  gen_style_candidates.py
src/studio/: __init__.py  cli.py  pipeline.py  publish.py
src/studio/collector/: collect.py  score.py  sources.py
src/studio/imagegen/: generate.py  inspect.py  pipeline.py
src/studio/notifier/: line.py
src/studio/publisher/: kv.py  r2.py  tiktok.py
src/studio/renderer/: assets.py  effects.py  layout.py  render.py  textgen.py  timeline.py
src/studio/scorer/: score.py
src/studio/scriptwriter/: factcheck.py  generate.py  write.py
src/studio/shared/: config.py  db.py  genres.py  llm.py  models.py
src/studio/tts/: synthesize.py  voicevox.py
tests/: test_effects.py  test_genres.py  test_llm_and_scorer.py  test_models.py  test_publish_and_tiktok.py  test_scriptwriter_repair.py  test_timeline.py  test_topic_stock.py
workers/approval/: wrangler.toml.template
workers/approval/src/: index.js
