[project]
name = "ai-news-studio"
version = "0.1.0"
description = "AI産業革命報道局 — TikTok半自動運用システム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "moviepy>=2.1",
    "pillow>=10.3",
    "numpy>=1.26",
    "httpx>=0.27",
    "tenacity>=8.4",
]

[project.optional-dependencies]
# M2以降で使う外部連携。M1のrender/testには不要なので分離しておく。
pipeline = [
    "anthropic>=0.34",
    "feedparser>=6.0",
    "boto3>=1.34",
]

[project.scripts]
studio = "studio.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# typer は引数デフォルトで Option() を呼ぶのが定石（B008は誤検知）
"src/studio/cli.py" = ["B008"]
# LLMプロンプト文字列は日本語の可読性を優先し行長を緩和する
"src/studio/scriptwriter/generate.py" = ["E501"]
"src/studio/scriptwriter/factcheck.py" = ["E501"]
"src/studio/collector/score.py" = ["E501"]
"src/studio/shared/llm.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
